[gd_scene load_steps=41 format=2]

[ext_resource path="res://Src/Levels/Luna.gd" type="Script" id=1]
[ext_resource path="res://Src/Levels/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/Planets/Barren2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Planets/Barren3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Planets/Barren.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/Planets/Barren1.png" type="Texture" id=6]
[ext_resource path="res://Src/Levels/Trajectory.gd" type="Script" id=7]
[ext_resource path="res://Assets/uibar.png" type="Texture" id=8]
[ext_resource path="res://Assets/fill.png" type="Texture" id=9]
[ext_resource path="res://Src/Levels/circlepulse.tres" type="Material" id=10]
[ext_resource path="res://Assets/Font/score_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://Src/Levels/ScoreLabel.gd" type="Script" id=12]
[ext_resource path="res://Assets/Textures/Crystal.png" type="Texture" id=13]
[ext_resource path="res://Src/Levels/PUD.gd" type="Script" id=14]
[ext_resource path="res://Assets/redirectui.png" type="Texture" id=16]
[ext_resource path="res://Src/Levels/redirectui.gd" type="Script" id=17]
[ext_resource path="res://Assets/redirectuiarrow.png" type="Texture" id=18]
[ext_resource path="res://Assets/boost icon.png" type="Texture" id=19]
[ext_resource path="res://Src/Levels/circlepulse2.tres" type="Material" id=20]
[ext_resource path="res://Src/Levels/boost.gd" type="Script" id=21]
[ext_resource path="res://Assets/boost icon disabled.png" type="Texture" id=22]
[ext_resource path="res://Assets/redirect.png" type="Texture" id=23]
[ext_resource path="res://Assets/Shield.png" type="Texture" id=24]
[ext_resource path="res://Assets/redirectdisabled.png" type="Texture" id=25]
[ext_resource path="res://Assets/Shield_disabled.png" type="Texture" id=26]
[ext_resource path="res://Src/Levels/Shield.gd" type="Script" id=27]
[ext_resource path="res://Src/Levels/rewind.gd" type="Script" id=28]
[ext_resource path="res://Assets/blank.png" type="Texture" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 13 )
region = Rect2( 640, 0, 128, 128 )
filter_clip = true

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 13 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="Gradient" id=12]
colors = PoolColorArray( 0.45098, 0.486275, 0.678431, 1, 1, 1, 1, 0 )

[node name="Luna" type="Node2D" groups=[
"Luna",
]]
position = Vector2( -0.0184784, 0.286999 )
script = ExtResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="." groups=[
"Luna",
]]
position = Vector2( 0.0133057, -0.10199 )
collision_mask = 2
mode = 2
mass = 102.041
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 0.0
angular_damp = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="RigidBody2D"]
position = Vector2( -3.05176e-05, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )

[node name="Shield" type="TextureRect" parent="RigidBody2D/AnimatedSprite"]
visible = false
show_behind_parent = true
material = ExtResource( 10 )
margin_left = -68.7441
margin_top = -54.4263
margin_right = 69.2559
margin_bottom = 54.5737
texture = ExtResource( 29 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( -0.0692749, 0.0133972 )
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="RigidBody2D"]

[node name="Energy Bar" type="HBoxContainer" parent="RigidBody2D/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -129.0
margin_right = 128.0
rect_min_size = Vector2( 128, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="RigidBody2D/CanvasLayer/Energy Bar"]
margin_right = 128.0
margin_bottom = 129.0
rect_min_size = Vector2( 128, 128 )
max_value = 1000.0
value = 500.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
fill_mode = 4
nine_patch_stretch = true

[node name="TextureRect" type="TextureRect" parent="RigidBody2D/CanvasLayer/Energy Bar/TextureProgress"]
show_behind_parent = true
material = ExtResource( 10 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -129.0
margin_right = 128.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="RigidBody2D/CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.941176, 0, 1 )
text = "100
"
align = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PUD" type="Control" parent="RigidBody2D/CanvasLayer"]
anchor_left = 0.111
anchor_top = 0.785
anchor_right = 0.111
anchor_bottom = 0.785
margin_left = 0.114861
margin_top = 0.0347595
margin_right = 350.115
margin_bottom = 142.035
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 142 )
size_flags_vertical = 0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RigidBody2D/CanvasLayer/PUD"]
margin_right = 350.0
margin_bottom = 142.0
rect_min_size = Vector2( 350, 142 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RigidBody2D/CanvasLayer/PUD/HBoxContainer"]
material = SubResource( 3 )
margin_right = 128.0
margin_bottom = 142.0
rect_min_size = Vector2( 128, 128 )
texture = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="RigidBody2D/CanvasLayer/PUD/HBoxContainer/TextureRect"]
position = Vector2( 64, 63.5 )
scale = Vector2( 0.95, 0.95 )
frames = SubResource( 11 )
frame = 2
playing = true

[node name="Label" type="RichTextLabel" parent="RigidBody2D/CanvasLayer/PUD/HBoxContainer"]
margin_left = 132.0
margin_top = 17.0
margin_right = 172.0
margin_bottom = 125.0
rect_min_size = Vector2( 40, 108 )
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 11 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
custom_constants/table_vseparation = 0
text = "2

"
scroll_active = false

[node name="Label3" type="RichTextLabel" parent="RigidBody2D/CanvasLayer/PUD/HBoxContainer"]
margin_left = 176.0
margin_top = 17.0
margin_right = 216.0
margin_bottom = 125.0
rect_min_size = Vector2( 40, 108 )
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 11 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
custom_constants/table_vseparation = 0
text = "/"
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="RigidBody2D/CanvasLayer/PUD/HBoxContainer"]
margin_left = 220.0
margin_top = 17.0
margin_right = 260.0
margin_bottom = 125.0
rect_min_size = Vector2( 40, 108 )
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 11 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
text = "4"
scroll_active = false

[node name="Rewind" type="TextureButton" parent="RigidBody2D/CanvasLayer"]
margin_left = 91.8243
margin_top = 288.589
margin_right = 155.824
margin_bottom = 352.589
rect_rotation = 180.0
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 22 )
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RigidBody2D/CanvasLayer/Rewind"]
show_behind_parent = true
material = ExtResource( 20 )
margin_left = 0.099823
margin_top = -0.0108948
margin_right = 69.0998
margin_bottom = 66.9891
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="TextureButton" parent="RigidBody2D/CanvasLayer"]
margin_left = 21.9775
margin_top = 302.747
margin_right = 101.977
margin_bottom = 382.747
texture_normal = ExtResource( 24 )
texture_disabled = ExtResource( 26 )
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RigidBody2D/CanvasLayer/Shield"]
show_behind_parent = true
material = ExtResource( 20 )
margin_left = 0.099823
margin_top = -0.0108948
margin_right = 69.0998
margin_bottom = 66.9891
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Redirect" type="TextureButton" parent="RigidBody2D/CanvasLayer"]
margin_left = 21.9774
margin_top = 391.471
margin_right = 101.977
margin_bottom = 474.471
texture_normal = ExtResource( 23 )
texture_disabled = ExtResource( 25 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RigidBody2D/CanvasLayer/Redirect"]
show_behind_parent = true
material = ExtResource( 20 )
margin_left = 0.099823
margin_top = -0.0108948
margin_right = 69.0998
margin_bottom = 66.9891
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="RigidBody2D"]
position = Vector2( -0.0133057, 0.10199 )
current = true
zoom = Vector2( 10, 10 )
script = ExtResource( 2 )

[node name="Zoom" type="Tween" parent="RigidBody2D/Camera2D"]

[node name="MinimapPosition" type="Position2D" parent="RigidBody2D"]

[node name="redirectui" type="Sprite" parent="RigidBody2D"]
visible = false
self_modulate = Color( 1, 1, 1, 0.364706 )
position = Vector2( -0.012619, 0.275471 )
rotation = -0.00543074
texture = ExtResource( 16 )
script = ExtResource( 17 )

[node name="redirectuiarrow" type="Sprite" parent="RigidBody2D/redirectui"]
position = Vector2( -0.47111, 0.593482 )
texture = ExtResource( 18 )

[node name="Line2D" type="Line2D" parent="."]
width = 4.0
default_color = Color( 0.658824, 0.647059, 0.788235, 1 )
gradient = SubResource( 12 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 7 )
[connection signal="body_entered" from="RigidBody2D" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="pressed" from="RigidBody2D/CanvasLayer/Rewind" to="RigidBody2D/CanvasLayer/Rewind" method="_on_Rewind_pressed"]
[connection signal="button_up" from="RigidBody2D/CanvasLayer/Shield" to="RigidBody2D/CanvasLayer/Shield" method="_on_Shield_button_up"]
[connection signal="button_up" from="RigidBody2D/CanvasLayer/Redirect" to="RigidBody2D/CanvasLayer/Redirect" method="_on_TextureButton_button_up"]
[connection signal="tween_all_completed" from="RigidBody2D/Camera2D/Zoom" to="." method="_on_Zoom_tween_all_completed"]
